MongoShop project fixed